--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,9 @@ body {
   font-family: Georgia, serif;
   width: 700px;
   margin: auto;
-  background: ghostwhite;
+  background-image: "https://www.namuseum.gr/wp-content/uploads/2018/10/11-X-13396_lightbox.jpg";
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 h1 {
   margin-bottom: 2px;
