--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
   font-family: Georgia, serif;
+  font-weight: bold;
   width: 700px;
   margin: auto;
   background-image: url("https://s3-us-west-1.amazonaws.com/sfmoma-media-dev/www-media/2018/08/03041415/Vo_Olowska_Beck-1024x441.png");
@@ -31,9 +32,6 @@ li {
 }
 em {
   font-style: italic;
-}
-.body {
-  background-color: ghostwhite;
 }
 .text {
   font-size: large;
