--- a/styles.css
+++ b/styles.css
@@ -14,16 +14,19 @@ h1 {
   margin-bottom: 2px;
   float: left;
   padding-top: 4px;
+  color: indigo;
 }
 h2 {
   font-size: medium;
   font-style: italic;
   padding-top: 40px;
   text-align: right;
+  color: indigo;
 }
 h3 {
   font-size: x-large;
   padding-top: 20px;
+  color: indigo;
 }
 p {
   font-size: larger;
