--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,12 @@ body {
   font-weight: 500;
   width: 700px;
   margin: auto;
-  background-image: url("https://s3-us-west-1.amazonaws.com/sfmoma-media-dev/www-media/2018/08/03041415/Vo_Olowska_Beck-1024x441.png");
+  background: 
+     linear-gradient(
+      rgba(255, 0, 0, 0.45), 
+      rgba(255, 0, 0, 0.45)
+    ),
+    url("https://s3-us-west-1.amazonaws.com/sfmoma-media-dev/www-media/2018/08/03041415/Vo_Olowska_Beck-1024x441.png");
   background-blend-mode: lighten;
   background-position: center;
   background-size: cover;
