--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,10 @@ body {
   width: 700px;
   margin: auto;
   background: 
-    linear-gradient(e8c984,e8c984),
+linear-gradient(
+      rgba(232, 201, 132, 0.8), 
+      rgba(255, 201, 132, 0.8)
+    ),
     url("https://s3-us-west-1.amazonaws.com/sfmoma-media-dev/www-media/2018/08/03041415/Vo_Olowska_Beck-1024x441.png");
   background-blend-mode: lighten;
   background-position: center;
