--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,7 @@ body {
   font-weight: 500;
   width: 700px;
   margin: auto;
-  background: 
-linear-gradient(
-      rgba(232, 201, 132, 0.8), 
-      rgba(232, 201, 132, 0.8)
-    ),
-    url("https://s3-us-west-1.amazonaws.com/sfmoma-media-dev/www-media/2018/08/03041415/Vo_Olowska_Beck-1024x441.png");
-  background-blend-mode: lighten;
+  background-image: url("https://s3-us-west-1.amazonaws.com/sfmoma-media-dev/www-media/2018/08/03041415/Vo_Olowska_Beck-1024x441.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
