--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Georgia, Times New Roman, serif;
   font-weight: 500;
   width: 700px;
   margin: auto;
