--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@ body {
   font-weight: 500;
   width: 700px;
   margin: auto;
-  background-image: linear-gradient(rgba(113,107,255,.25),rgba(113,107,255,.25)),url("https://s3-us-west-1.amazonaws.com/sfmoma-media-dev/www-media/2018/08/03041415/Vo_Olowska_Beck-1024x441.png");
-  background-position: center;
+  background-image: url("https://s3-us-west-1.amazonaws.com/sfmoma-media-dev/www-media/2018/08/26081114/2012.210_01_H02-Large-TIFF_4000-pixels-long-638x850.jpg");
+  background-position: left center;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
