--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@ body {
   width: 700px;
   margin: auto;
   background-image: url("https://s3-us-west-1.amazonaws.com/sfmoma-media-dev/www-media/2018/08/26081114/2012.210_01_H02-Large-TIFF_4000-pixels-long-638x850.jpg");
-  background-position: left center;
-  background-size: cover;
+  background-position: left top;
+  background-size: auto;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
