--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,8 @@ body {
   font-weight: 500;
   width: 700px;
   margin: auto;
-  background-color: ghostwhite;
+  background-color: white;
+  color: dimgrey;
 }
 h1 {
   margin-bottom: 2px;
