--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
   width: 700px;
   margin: auto;
   background-color: white;
-  color: dimgrey;
+  color: darkslategrey;
 }
 h1 {
   margin-bottom: 2px;
