--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
   }
 }
 body {
-  font-family: Georgia, Times New Roman, serif;
+  font-family: Ariel, sans-serif;
   font-weight: 500;
   background-color: white;
   color: darkslategrey;
