--- a/Documents/music/_includes/footer.html
+++ b/Documents/music/_includes/footer.html
@@ -17,9 +17,8 @@
 <meta name="dc.date" content="2019-09-01" />
 <meta name="dc.language" content="English" />
 <meta name="dc.type" content="Interactive Resource" />
-<meta name="dc.format" content="digital humanities project"
 <meta name="dc.subjects" content:="Ezra Pound, Marjory Kennedy-Fraser, Old English poetry" />
-<meta name="dc.description" content="A digital critical edition and introduction of an unpublished essay draft (1928) of the modernist American poet Ezra Pound, held in the Pound Papers collection at the Beinecke Rare Book and Manuscript Library (Yale); built on the digital humanities platform resource Digital Mappa (version 2.0); an open-source digital humanities platform for open-access, browser-based workspace, projects and publications." />
+<meta name="dc.description" content="A digital critical edition and introduction of an unpublished essay draft (1928) of the modernist American poet Ezra Pound, held in the Pound Papers collection at the Beinecke Rare Book and Manuscript Library (Yale); built on the digital humanities platform resource Digital Mappa (version 2.0); an open-access, browser-based workspace and digital publishing platform for collaborative digital humanities projects, editions and scholarship of collections of digital images and texts." />
 <meta name="dc.source" content="Ezra Pound, “The Music of Beowulf,” Beinecke Rare Book and Manuscript Library, Pound Papers (YCAL MSS 43): Series IV. Manuscripts, Box 69, Folder 3045." />
 <meta name="dc.rights" content="“The Music of Beowulf,” by Ezra Pound, from New Directions Pub. acting as agent, copyright © 2018 by Mary de Rachewiltz and the Estate of Omar S. Pound. Use by permission of New Directions Publishing Corp." />
 <meta name="dc.citation" content="Ezra Pound, “The Music of Beowulf”: A Digital Critical Edition and Introduction, edit. Maxwell Gray (Madison, WI: Center for the History of Print and Digital Culture, 2019): https://uw.digitalmappa.org/57. DOI: 10.21231/5sh6-ga95." />
