--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
   font-family: Palatino, Times New Roman, serif;
   font-weight: 500;
   background-color: white;
-  color: darkslategrey;
+  color: black;
 }
 h1 {
   float: left;
