--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
   }
 }
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Palatino, Times, serif;
   font-weight: 500;
   background-color: white;
   color: black;
