--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@ em {
   font-size: larger;
 }
 .raisedbox {
+  padding: 10px;
   -webkit-box-shadow: 2px 2px 5px 3px #DCDCDC;
   -moz-box-shadow:    2px 2px 5px 3px #DCDCDC;
   box-shadow:         2px 2px 5px 3px #DCDCDC;
