--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,12 @@ em {
   font-size: larger;
 }
 .raisedbox {
-  padding: 10px;
+  padding-top: 16px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  margin-top: 40px;
+  margin-bottom: 40px;
   -webkit-box-shadow: 2px 2px 5px 3px #DCDCDC;
   -moz-box-shadow:    2px 2px 5px 3px #DCDCDC;
   box-shadow:         2px 2px 5px 3px #DCDCDC;
