--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 body {
   font-family: Palatino, Times, serif;
   font-weight: 500;
-  background-color: lightgray;
+  background-color: snow;
   color: black;
 }
 h1 {
@@ -52,7 +52,7 @@ em {
   padding-left: 20px;
   margin-top: 40px;
   margin-bottom: 40px;
-  -webkit-box-shadow: 2px 2px 5px 3px #DCDCDC;
-  -moz-box-shadow:    2px 2px 5px 3px #DCDCDC;
-  box-shadow:         2px 2px 5px 3px #DCDCDC;
+  -webkit-box-shadow: 0px 0px 5px 3px #DCDCDC;
+  -moz-box-shadow:    0px 0px 5px 3px #DCDCDC;
+  box-shadow:         0px 0px 5px 3px #DCDCDC;
 }
