--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 body {
   font-family: Palatino, Times, serif;
   font-weight: 500;
-  background-color: snow;
+  background-color: whitesmoke;
   color: black;
 }
 h1 {
