--- a/styles.css
+++ b/styles.css
@@ -12,15 +12,13 @@
   }
 }
 body {
-  font-family: Palatino, Times, serif;
+  font-family: Verdana, Geneva, sans-serif;
   font-weight: 500;
   background-color: whitesmoke;
   color: black;
 }
 h1 {
   float: left;
-  padding-top: 4px;
-  margin-bottom: 2px;
 }
 h2 {
   font-size: medium;
