--- a/styles.css
+++ b/styles.css
@@ -35,11 +35,6 @@ h3 {
 p {
   font-size: medium;
 }
-p.nav {
-  font-size: medium;
-  position: absolute;
-  right: 0;
-}
 li {
   padding-bottom: 8px;
   font-size: medium;
@@ -64,7 +59,8 @@ em {
 }
 .navbar {
   overflow: hidden;
-  position: fixed;
-  top: 0; /* Position the navbar at the top of the page */
+  position: absolute;
+  right: 0px;
+  top: 20px;
   width: 100%; /* Full width */
 }
