--- a/styles.css
+++ b/styles.css
@@ -58,9 +58,9 @@ em {
   box-shadow:         0px 0px 5px 3px #DCDCDC;
 }
 .navbar {
+  justify-content: right;
   overflow: hidden;
-  position: absolute;
-  right: 0px;
-  top: 20px;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
 }
