--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,6 @@ em {
   justify-content: right;
   overflow: hidden;
   position: fixed; /* Set the navbar to fixed position */
-  top: 0; /* Position the navbar at the top of the page */
+  top: 20px; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
 }
