--- a/styles.css
+++ b/styles.css
@@ -58,9 +58,10 @@ em {
   box-shadow:         0px 0px 5px 3px #DCDCDC;
 }
 .navbar {
-  justify-content: right;
+  justify-content: left;
   overflow: hidden;
   position: fixed; /* Set the navbar to fixed position */
   top: 20px; /* Position the navbar at the top of the page */
+  bottom: 20px;
   width: 100%; /* Full width */
 }
