--- a/styles.css
+++ b/styles.css
@@ -59,8 +59,10 @@ em {
 }
 .navbar {
   text-align: right;
-  overflow: hidden;
-  position: fixed; /* Set the navbar to fixed position */
-  top: 20px; /* Position the navbar at the top of the page */
-  width: 100%; /* Full width */
+  padding-top: 0px;
+  padding-right: 20px;
+  padding-bottom: 30px;
+  padding-left: 20px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
